--- a/sections/rose-quartz.liquid
+++ b/sections/rose-quartz.liquid
@@ -29,7 +29,7 @@
                     <div class="benefit-item">
                         <div class="benefit-content">
                             <h4>Emotional Healing & Self-Love</h4>
-                            <p>Rose quartz supports healthy circulation while harmonizing the heart chakra and deepening connection.</p>
+                            <p>Rose quartz supports healthy circulation while harmonizing the heart chakra and deepening your connection with yourself.</p>
                         </div>
                     </div>
                     <div class="benefit-item">
