--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -11,21 +11,21 @@
         <div class="testimonials-grid">
             <div class="testimonial-card fade-in">
                 <div class="testimonial-stars">★★★★★</div>
-                <p class="testimonial-text">"When I use too much of the most used commercial laundry detergent, I feel my clothes are too stiff. With Love Paks, I could feel the difference, my clothes are really soft and I didn't use softener."</p>
+                <p class="testimonial-text">"When I use too much of the most used commercial laundry detergent, I feel my clothes are too stiff. With Love Paks, I could feel the difference; my clothes are really soft and I didn't use softener."</p>
                 <div class="testimonial-author">
                     <span class="testimonial-name">Claudia R.</span>
                 </div>
             </div>
             <div class="testimonial-card fade-in">
                 <div class="testimonial-stars">★★★★★</div>
-                <p class="testimonial-text">"After using Love Paks for a month, I noticed that I was sleeping better, I didn't feel as anxious and in general I was feeling more at peace with myself and connected with the world around me."</p>
+                <p class="testimonial-text">"After using Love Paks for a month, I noticed that I was sleeping better; I didn't feel as anxious, and in general I was feeling more at peace with myself and connected with the world around me."</p>
                 <div class="testimonial-author">
                     <span class="testimonial-name">Ryan H.</span>
                 </div>
             </div>
             <div class="testimonial-card fade-in">
                 <div class="testimonial-stars">★★★★★</div>
-                <p class="testimonial-text">"Ever since I can remember, I had the Restless Leg Syndrome, I've been using Love Paks for about two months and now I can tell the difference. My mind is more at ease, and I barely find myself moving my legs."</p>
+                <p class="testimonial-text">"Ever since I can remember, I had Restless Leg Syndrome. I've been using Love Paks for about two months, and now I can tell the difference; my mind is more at ease, and I barely find myself moving my legs."</p>
                 <div class="testimonial-author">
                     <span class="testimonial-name">Katherinne L.</span>
                 </div>
@@ -39,14 +39,14 @@
             </div>
             <div class="testimonial-card fade-in">
                 <div class="testimonial-stars">★★★★★</div>
-                <p class="testimonial-text">"I won't say this product cured my anxiety, but ever since I've been using it, I've had less anxiety attacks, I feel with more strength and calm to go through the day."</p>
+                <p class="testimonial-text">"I won't say this product cured my anxiety, but ever since I've been using it, I've had fewer anxiety attacks; I feel more strength and calm to go through the day."</p>
                 <div class="testimonial-author">
                     <span class="testimonial-name">William P.</span>
                 </div>
             </div>
             <div class="testimonial-card fade-in">
                 <div class="testimonial-stars">★★★★★</div>
-                <p class="testimonial-text">"When it's laundry day my entire apartment smells amazing, I use the Citrus Blossom version."</p>
+                <p class="testimonial-text">"When it's laundry day, my entire apartment smells amazing; I use the Citrus Blossom version."</p>
                 <div class="testimonial-author">
                     <span class="testimonial-name">Julieth S.</span>
                 </div>
@@ -61,7 +61,7 @@
             </div>
             <div class="testimonial-card testimonial-hidden fade-in">
                 <div class="testimonial-stars">★★★★★</div>
-                <p class="testimonial-text">"I love this product soooo much, I was sad when I ran out!"</p>
+                <p class="testimonial-text">"I love this product so much; I was sad when I ran out!"</p>
                 <div class="testimonial-author">
                     <span class="testimonial-name">Brooke E.</span>
                     <span class="testimonial-location">Wisconsin</span>
