--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -15,6 +15,7 @@
                 <h4 class="footer-section-title">Products</h4>
                 <div class="footer-links">
                     <a href="/pages/catalog" class="footer-link">Products</a>
+                    <a href="/pages/become-an-ambassador" class="footer-link">Become an Ambassador</a>
                 </div>
             </div>
             <div class="footer-section">
